--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+service.user.url=${USER_SERVICE_URL:"http://127.0.0.1:8080"}
+service.department.url=${DEPARTMENT_SERVICE_URL:"http://http://127.0.0.1:3000"}
